# rustipedia

./: .gitignore  CHANGELOG.md  Cargo.toml  IMPLEMENTATION_STATUS.md  LICENSE  LINK_VALIDATION_REPORT.md  README.md  REFACTORING_SUMMARY.md  SECURITY_AUDIT_REPORT.md  install.sh  install_mac.sh  test_output.txt
.agent/: AUTO_UPDATE_IMPLEMENTATION_PLAN.md  AUTO_UPDATE_QUICKSTART.md
.agent/workflows/: prune-links.md
.github/: RELEASE_CHECKLIST.md
.github/workflows/: release.yml
docs/installer/: INSTALLER_DATA_PRESERVATION.md  INSTALLER_FIXES_COMPLETE.md  LICENSE_FIX.md  SERVICE_PATH_FIX.md  TESTING_GUIDE.md  TESTING_RESULTS.md  WINDOWS_SERVICE_FIX.md
src/: article.rs  config.rs  downloader.rs  lib.rs  parser.rs  search.rs  update_config.rs  update_manager.rs
wix/: License.rtf  main.wxs
