[package]
name = "wiki_download"
version = "0.1.0"
edition = "2021"
description = "Download and serve your own local copy of Wikipedia"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
repository = "https://github.com/yourusername/wiki_download"
keywords = ["wikipedia", "download", "offline", "archive", "server"]
categories = ["command-line-utilities", "web-programming"]
readme = "README.md"

[[bin]]
name = "wiki-download"
path = "src/bin/download.rs"

[[bin]]
name = "wiki-serve"
path = "src/bin/serve.rs"

[[bin]]
name = "wiki-link-validator"
path = "src/bin/validate_links.rs"

[[bin]]
name = "wiki-setup"
path = "src/bin/setup.rs"

[lib]
name = "wiki_download"
path = "src/lib.rs"

[dependencies]
# CLI
clap = { version = "4.4", features = ["derive", "color"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP client for downloading
reqwest = { version = "0.12", features = ["stream", "blocking"] }

# Web server
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }

# XML parsing
quick-xml = "0.37"

# Compression
bzip2 = "0.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Text processing
regex = "1.10"
once_cell = "1.19"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Progress bars
indicatif = { version = "0.17", features = ["rayon"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Templates for web UI
askama = "0.12"

# Full-text search
tantivy = "0.22"

# URL encoding
urlencoding = "2.1"

# CLI Interaction
dialoguer = "0.11"
console = "0.15"

# System info
sysinfo = "0.30"

[dev-dependencies]
tempfile = "3.9"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

