[package]
name = "rustipedia"
version = "0.2.1"
edition = "2021"
description = "Download and host Wikipedia locally with full-text search - Your personal offline Wikipedia server"
authors = ["ChiefBoyardee"]
license = "MIT"
repository = "https://github.com/ChiefBoyardee/rustipedia"
keywords = ["wikipedia", "offline", "search", "wiki", "encyclopedia"]
categories = ["command-line-utilities", "web-programming"]
readme = "README.md"
homepage = "https://github.com/ChiefBoyardee/rustipedia"

[[bin]]
name = "rustipedia-download"
path = "src/bin/download.rs"

[[bin]]
name = "rustipedia-serve"
path = "src/bin/serve.rs"

[[bin]]
name = "rustipedia-link-validator"
path = "src/bin/validate_links.rs"

[[bin]]
name = "rustipedia-setup"
path = "src/bin/setup.rs"

[lib]
name = "rustipedia"
path = "src/lib.rs"

[dependencies]
# CLI
clap = { version = "4.4", features = ["derive", "color"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP client for downloading
reqwest = { version = "0.12", features = ["stream", "blocking"] }

# Web server
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors", "set-header", "timeout"] }

# XML parsing
quick-xml = "0.37"

# Compression
bzip2 = "0.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Text processing
regex = "1.10"
once_cell = "1.19"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Progress bars
indicatif = { version = "0.17", features = ["rayon"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Templates for web UI
askama = "0.12"

# Full-text search
tantivy = "0.22"

# URL encoding
urlencoding = "2.1"

# CLI Interaction
dialoguer = "0.11"
console = "0.15"

# System info
sysinfo = "0.30"
sha2 = "0.10"
hex = "0.4"
tower_governor = { version = "0.4.2", features = ["axum"] }
fs2 = "0.4.3"
rand = "0.9.2"

[dev-dependencies]
tempfile = "3.9"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

